--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,275 @@
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none !important;
+    outline: none;
+    appearance: none;
+    font-family: cursive, sans-serif;
+  }
+  
+  body {
+    font-size: 14px;
+    background: #e1dfdf;
+  }
+  
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  nav {
+    display: flex;
+    flex-direction: column;
+    padding: 0.2rem;
+    justify-content: center;
+  }
+  
+  h1 {
+    color: black;
+    font-size: 2rem;
+    font-weight: 800;
+    letter-spacing: -0.0525rem;
+    text-align: center;
+    padding: 1rem;
+  }
+  
+  h2 {
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 800;
+    letter-spacing: -0.0225rem;
+    padding: 0.2rem;
+  }
+  
+  h3 {
+    color: black;
+    font-size: 1.2rem;
+    font-weight: 600;
+    letter-spacing: 0.0025rem;
+  }
+  
+  .copyRights {
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.0125rem;
+    display: block;
+    padding: 0.5rem;
+    margin: 0.5rem;
+  }
+  
+  .copyRights a {
+    color: blue;
+  }
+  
+  .navBar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0.3rem;
+    background: rgb(165, 210, 210);
+    padding: 0.5rem;
+    box-shadow: 0 17px 17px -12px rgba(41, 36, 36, 0.95);
+  }
+  
+  .navBar h1 {
+    color: black;
+    font-size: 2rem;
+    font-weight: 800;
+    letter-spacing: -0.0525rem;
+    align-self: flex-start;
+    margin-left: 1.5rem;
+  }
+  
+  .navBar div {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 1rem;
+    gap: 0.5rem;
+  }
+  
+  .navBar div a {
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 800;
+    letter-spacing: -0.0225rem;
+  }
+  
+  .dayDate {
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.0125rem;
+    font-weight: 600;
+    align-self: flex-end;
+    margin-right: 0.4rem;
+  }
+  
+  #container {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin-bottom: 4rem;
+    margin-top: 0.5rem;
+    justify-content: stretch;
+    align-items: center;
+    color: #747272;
+    border-radius: 50px;
+    padding: 0.1rem;
+    gap: 1.5rem;
+  }
+  
+  #container h3 {
+    margin-top: 3rem;
+  }
+  
+  #container ul li {
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.0125rem;
+  }
+  
+  .bookForm {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+  }
+  
+  .pop-win {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    padding: 0.5rem;
+    background: #e6e5e5;
+    border-radius: 50px;
+  }
+  
+  .msg-win {
+    align-self: center;
+    color: #747272;
+  }
+  
+  input {
+    width: 180%;
+    height: 50px;
+    padding: 0.6rem;
+    border: 1px solid #747272;
+    border-radius: 8px;
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.0125rem;
+    box-shadow: 0 17px 17px -9px rgba(41, 36, 36, 0.95);
+  }
+  
+  input:hover {
+    background: rgb(180, 220, 222);
+    border-radius: 50px;
+    cursor: text;
+    box-shadow: 0 6px 5px 0 rgba(41, 36, 36, 0.95);
+  }
+  
+  .button {
+    transition: all 0.5s;
+    cursor: pointer;
+    background: hsl(210, 1%, 60%);
+    border: 1px solid #747272;
+    box-shadow: 0 17px 17px -9px rgba(41, 36, 36, 0.95);
+    border-radius: 8px;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: 0.001em;
+    word-spacing: normal;
+    transition-duration: 0.4s;
+    align-self: center;
+    padding: 0.6rem;
+    width: 7.5rem;
+    height: 3rem;
+  }
+  
+  button:hover {
+    border-radius: 50px;
+    background: #8ff2e5;
+    box-shadow: 0 6px 5px 0 rgba(41, 36, 36, 0.95);
+    transform: translateY(-5px);
+  }
+  
+  .newBook {
+    display: flex;
+    flex-direction: row;
+    justify-content: stretch;
+    align-items: stretch;
+    color: black;
+    font-size: 1rem;
+    letter-spacing: 0.0125rem;
+    border-radius: 50px;
+    background: #e8e6e6;
+    padding: 0.2rem;
+    gap: 0.2rem;
+    width: 60vw;
+    height: 50px;
+  }
+  
+  .bookPart {
+    flex: 5;
+    display: flex;
+    flex-direction: row;
+    padding: 0.3rem;
+    justify-content: space-between;
+    align-items: center;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+    box-shadow: 0 17px 17px -12px rgba(41, 36, 36, 0.95);
+  }
+  
+  .bookPart:hover {
+    background: #8ff2e5;
+    border-radius: 50px;
+    box-shadow: 0 6px 5px 0 rgba(41, 36, 36, 0.95);
+    transform: translateY(-5px);
+  }
+  
+  .remove {
+    flex: 1;
+    transition: all 0.5s;
+    cursor: pointer;
+    background: #7f7f7f;
+    border: 1px solid #747272;
+    box-shadow: 0 17px 17px -12px rgba(41, 36, 36, 0.95);
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+    font-weight: 500;
+    font-size: 1rem;
+    letter-spacing: 0.001em;
+    word-spacing: normal;
+    transition-duration: 0.4s;
+    align-self: flex-end;
+    padding: 0.3rem;
+    height: 44px;
+  }
+  
+  .hline {
+    border-bottom: 1px solid #747272;
+    text-align: center;
+  }
+  
+  .hide {
+    display: none !important;
+  }
+  
+  footer {
+    position: relative;
+    background: rgb(165, 210, 210);
+    top: auto;
+    bottom: 0.5rem;
+    width: 100%;
+    box-shadow: 0 -17px 17px -12px rgba(41, 36, 36, 0.95);
+  }
+  
